Bug 314373 - Creating files in tag folders causes unspecified behaviour
Summary: Creating files in tag folders causes unspecified behaviour
Status: RESOLVED FIXED
Alias: None
Product: frameworks-baloo
Classification: Frameworks and Libraries
Component: Tags (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Pinak Ahuja
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-03 18:48 UTC by Tianyu Zhu
Modified: 2017-11-29 19:04 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tianyu Zhu 2013-02-03 18:48:35 UTC
Creating files in tag folders, such as tags:/important causes unexpected behaviours.
Sometimes the file that is created just doesn't appear.
Sometimes a file in /usr/share/templates/.source/ shows up instead.

Reproducible: Always

Steps to Reproduce:
1. Go to "tags:/important" in Dolphin
2. Right click and create a new text file. Call it "test".
Actual Results:  
/usr/share/templates/.source/TextFile.txt shows up in "tags:/important".

Expected Results:  


I can think of three options:

1. Disallow creation of files in a tag folder
2. Put them in a default location, like /home/user/misc (although care must be taken to ensure that duplicate file names are resolved)
3. Ask the user where to actually store the file with a dialog (though precautions must be taken to ensure the user doesn't try to save the file in another tag folder)
Comment 1 Alexander Potashev 2016-03-20 15:37:11 UTC
With Baloo-5.20, Dolphin allows me to create a text file in "tags://1/", but I can't find it anywhere afterwards.
Comment 2 Thomas.Meschede 2017-02-12 00:48:25 UTC
still present in baloo 5.30.0
Comment 3 Jamie Smith 2017-11-29 19:04:15 UTC
Git commit 16664fccb7b7a92b910ca479d0ee227a72e44787 by James D. Smith.
Committed on 29/11/2017 at 19:04.
Pushed by smithjd into branch 'master'.

Strip down and re-write the baloo tags KIO slave

Summary:
Allow for more operations on tag trees (e.g. rename, copy, delete) and fix some existing issues.
Related: bug 340098, bug 376229, bug 332214, bug 340099

Reviewers: #frameworks, vhanda, #dolphin, ngraham, dfaure

Reviewed By: ngraham, dfaure

Subscribers: anthonyfieroni, dfaure, nicolasfella, ngraham

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D8098

M  +339  -305  src/kioslaves/tags/kio_tags.cpp
M  +29   -14   src/kioslaves/tags/kio_tags.h
M  +6    -6    src/kioslaves/tags/tags.protocol

https://commits.kde.org/baloo/16664fccb7b7a92b910ca479d0ee227a72e44787