Strip down and re-write the baloo tags KIO slave

Summary:
Allow for more operations on tag trees (e.g. rename, copy, delete) and fix some existing issues.

BUG: 314373
BUG: 340098
BUG: 376229
BUG: 332214
BUG: 340099

Reviewers: #frameworks, vhanda, #dolphin, ngraham, dfaure

Reviewed By: ngraham, dfaure

Subscribers: anthonyfieroni, dfaure, nicolasfella, ngraham

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D8098