src/kioslaves/tags/kio_tags.cpp
@@ -1,6 +1,7 @@
 /*
  * This file is part of the KDE Baloo Project
  * Copyright (C) 2012-2014  Vishesh Handa <me@vhanda.in>
+ * Copyright (C) 2017  James D. Smith <smithjd15@gmail.com>
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -24,10 +25,12 @@
 
 #include <QUrl>
 #include <QDebug>
+#include <QLoggingCategory>
 
 #include <KLocalizedString>
 #include <KUser>
-#include <kio/job.h>
+#include <KFileMetaData/UserMetaData>
+#include <KIO/Job>
 
 #include <QCoreApplication>
 #include <QDateTime>
@@ -38,6 +41,8 @@
 
 #include "query.h"
 #include "term.h"
+
+Q_LOGGING_CATEGORY(KIO_TAGS, "kf5.kio.kio_tags")
 
 using namespace Baloo;
 
@@ -50,388 +55,417 @@ TagsProtocol::~TagsProtocol()
 {
 }
 
-
-namespace
-{
-KIO::UDSEntry createUDSEntryForTag(const QString& tag)
-{
-    KIO::UDSEntry uds;
-    uds.insert(KIO::UDSEntry::UDS_NAME, tag);
-    uds.insert(KIO::UDSEntry::UDS_DISPLAY_NAME, tag);
-    uds.insert(KIO::UDSEntry::UDS_FILE_TYPE, S_IFDIR);
-    uds.insert(KIO::UDSEntry::UDS_MIME_TYPE, QStringLiteral("inode/directory"));
-    uds.insert(KIO::UDSEntry::UDS_DISPLAY_TYPE, i18n("Tag"));
-    uds.insert(KIO::UDSEntry::UDS_ACCESS, 0700);
-    uds.insert(KIO::UDSEntry::UDS_USER, KUser().loginName());
-    uds.insert(KIO::UDSEntry::UDS_ICON_NAME, QStringLiteral("tag"));
-
-    return uds;
-}
-}
-
 void TagsProtocol::listDir(const QUrl& url)
 {
-    qDebug() << url;
+    ParseResult result = parseUrl(url);
 
-    QString tag;
-    QString fileUrl;
-    QStringList paths;
-
-    ParseResult result = parseUrl(url, tag, fileUrl);
-
-    TagListJob* job = new TagListJob();
-    job->exec();
-
-    switch (result) {
-    case InvalidUrl:
-        return;
-
-    case RootUrl: {
-        qDebug() << "Root Url";
-
-        for (QString resultTag : job->tags()) {
-            if (resultTag.contains(QLatin1Char('/'))) {
-                resultTag = resultTag.section(QLatin1Char('/'), 0, 0, QString::SectionSkipEmpty);
-            }
-            if (paths.contains(resultTag, Qt::CaseInsensitive)) {
-                continue;
-            } else {
-                paths.insert(0, resultTag);
-            }
-            listEntry(createUDSEntryForTag(resultTag));
-        }
-
-        finished();
-        return;
+    switch(result.urlType) {
+        case InvalidUrl:
+            qCWarning(KIO_TAGS) << result.decodedUrl << "list() invalid url";
+            error(KIO::ERR_CANNOT_ENTER_DIRECTORY, result.decodedUrl);
+            return;
+        case FileUrl:
+            ForwardingSlaveBase::listDir(result.fileUrl);
+            return;
+        case TagUrl:
+            listEntries(result.pathUDSResults);
     }
 
-    case TagUrl: {
-        for (QString resultTag : job->tags()) {
-            if (resultTag.startsWith(tag, Qt::CaseInsensitive) && resultTag.contains(QLatin1Char('/'))) {
-                resultTag.remove(0, (tag.size() + 1));
-                resultTag = resultTag.section(QLatin1Char('/'), 0, 0, QString::SectionSkipEmpty);
-                if (paths.contains(resultTag, Qt::CaseInsensitive)) {
-                    continue;
-                } else {
-                    paths.insert(0, resultTag);
-                }
-                listEntry(createUDSEntryForTag(resultTag));
-            }
-        }
-
-        Query q;
-        q.setSortingOption(Query::SortNone);
-        q.setSearchString(QStringLiteral("tag=\"%1\"").arg(tag));
-
-        ResultIterator it = q.exec();
-        while (it.next()) {
-            const QUrl url = QUrl::fromLocalFile(it.filePath());
-            const QString fileUrl = url.toLocalFile();
-
-            // Somehow stat the file
-            KIO::UDSEntry uds;
-            if (KIO::StatJob* job = KIO::stat(url, KIO::HideProgressInfo)) {
-                // we do not want to wait for the event loop to delete the job
-                QScopedPointer<KIO::StatJob> sp(job);
-                job->setAutoDelete(false);
-                if (job->exec()) {
-                    uds = job->statResult();
-                } else {
-                    continue;
-                }
-            }
-
-            uds.insert(KIO::UDSEntry::UDS_NAME, encodeFileUrl(fileUrl));
-            uds.insert(KIO::UDSEntry::UDS_DISPLAY_NAME, url.fileName());
-            //uds.insert(KIO::UDSEntry::UDS_URL, url);
-            uds.insert(KIO::UDSEntry::UDS_TARGET_URL, url.url());
-            uds.insert(KIO::UDSEntry::UDS_LOCAL_PATH, fileUrl);
-
-            listEntry(uds);
-        }
-
-        finished();
-        return;
-    }
-
-    case FileUrl:
-        qDebug() << "File URL : " << fileUrl;
-        ForwardingSlaveBase::listDir(QUrl::fromLocalFile(fileUrl));
-        return;
-    }
+    finished();
 }
 
 void TagsProtocol::stat(const QUrl& url)
 {
-    qDebug() << url;
+    ParseResult result = parseUrl(url);
 
-    QString tag;
-    QString fileUrl;
-
-    ParseResult result = parseUrl(url, tag, fileUrl);
-    switch (result) {
-    case InvalidUrl:
-        return;
-
-    case RootUrl: {
-        KIO::UDSEntry uds;
-        uds.insert(KIO::UDSEntry::UDS_ACCESS, 0700);
-        uds.insert(KIO::UDSEntry::UDS_USER, KUser().loginName());
-        uds.insert(KIO::UDSEntry::UDS_FILE_TYPE, S_IFDIR);
-        uds.insert(KIO::UDSEntry::UDS_MIME_TYPE, QStringLiteral("inode/directory"));
-
-        uds.insert(KIO::UDSEntry::UDS_ICON_OVERLAY_NAMES, QStringLiteral("tag"));
-        uds.insert(KIO::UDSEntry::UDS_DISPLAY_TYPE, i18n("Tag"));
-
-        uds.insert(KIO::UDSEntry::UDS_NAME, QStringLiteral("."));
-        uds.insert(KIO::UDSEntry::UDS_DISPLAY_NAME, i18n("All Tags"));
-
-        statEntry(uds);
-        finished();
-        return;
+    switch(result.urlType) {
+        case InvalidUrl:
+            qCWarning(KIO_TAGS) << result.decodedUrl << "stat() invalid url";
+            error(KIO::ERR_DOES_NOT_EXIST, result.decodedUrl);
+            return;
+        case FileUrl:
+            ForwardingSlaveBase::stat(result.fileUrl);
+            return;
+        case TagUrl:
+            for (const KIO::UDSEntry& entry : result.pathUDSResults) {
+                if (entry.stringValue(KIO::UDSEntry::UDS_EXTRA) == result.tag) {
+                    statEntry(entry);
+                }
+            }
     }
 
-    case TagUrl: {
-        statEntry(createUDSEntryForTag(tag));
-        finished();
-        return;
-    }
-
-    case FileUrl:
-        ForwardingSlaveBase::get(QUrl::fromLocalFile(fileUrl));
-        return;
-    }
+    finished();
 }
 
-void TagsProtocol::copy(const QUrl& src, const QUrl& dest, int, KIO::JobFlags)
-{
-    qDebug() << src << dest;
-
-    if (src.scheme() != QLatin1String("file")) {
-        error(KIO::ERR_UNSUPPORTED_ACTION, src.toString());
-        return;
-    }
-
-    QString tag;
-    QString fileUrl;
-
-    ParseResult result = parseUrl(dest, tag, fileUrl);
-    switch (result) {
-    case InvalidUrl:
-        return;
-
-    case RootUrl:
-    case TagUrl:
-        error(KIO::ERR_UNSUPPORTED_ACTION, src.toString());
-        return;
-
-    case FileUrl:
-        /*
-         * FIXME: Do we really need to support copy operations?
-        Baloo::FileFetchJob* job = new Baloo::FileFetchJob(fileUrl);
-        job->exec();
-        Baloo::File file = job->file();
-
-        file.addTag(tag);
-        Baloo::FileModifyJob* mjob = new Baloo::FileModifyJob(file);
-        mjob->exec();
-        */
-
-        finished();
-        return;
-    }
-}
-
-
-void TagsProtocol::get(const QUrl& url)
-{
-    qDebug() << url;
-
-    QString tag;
-    QString fileUrl;
-
-    ParseResult result = parseUrl(url, tag, fileUrl);
-    switch (result) {
-    case InvalidUrl:
-        return;
-
-    case RootUrl:
-    case TagUrl:
-        error(KIO::ERR_UNSUPPORTED_ACTION, url.toString());
-        return;
-
-    case FileUrl:
-        ForwardingSlaveBase::get(QUrl::fromLocalFile(fileUrl));
-        return;
-    }
-}
-
-
-void TagsProtocol::put(const QUrl& url, int permissions, KIO::JobFlags flags)
+void TagsProtocol::copy(const QUrl& src, const QUrl& dest, int permissions, KIO::JobFlags flags)
 {
     Q_UNUSED(permissions);
     Q_UNUSED(flags);
 
-    error(KIO::ERR_UNSUPPORTED_ACTION, url.toString());
-    return;
+    ParseResult srcResult = parseUrl(src);
+    ParseResult dstResult = parseUrl(dest, QList<ParseFlags>() << ChopLastSection << LazyValidation);
+
+    if (srcResult.urlType == InvalidUrl) {
+        qCWarning(KIO_TAGS) << srcResult.decodedUrl << "copy() invalid src url";
+        error(KIO::ERR_DOES_NOT_EXIST, srcResult.decodedUrl);
+        return;
+    } else if (dstResult.urlType == InvalidUrl) {
+        qCWarning(KIO_TAGS) << dstResult.decodedUrl << "copy() invalid dest url";
+        error(KIO::ERR_DOES_NOT_EXIST, dstResult.decodedUrl);
+        return;
+    }
+
+    auto rewriteTags = [] (KFileMetaData::UserMetaData& md, const QString& newTag) {
+        qCDebug(KIO_TAGS) << md.filePath() << "adding tag" << newTag;
+        QStringList tags = md.tags();
+        tags.append(newTag);
+        md.setTags(tags);
+    };
+
+    if (srcResult.metaData.tags().contains(dstResult.tag)) {
+        qCWarning(KIO_TAGS) << srcResult.fileUrl.toLocalFile() << "file already has tag" << dstResult.tag;
+        infoMessage(i18n("File %1 already has tag %2", srcResult.fileUrl.toLocalFile(), dstResult.tag));
+    } else if (dstResult.urlType == TagUrl) {
+        rewriteTags(srcResult.metaData, dstResult.tag);
+    }
+
+    finished();
 }
 
+void TagsProtocol::get(const QUrl& url)
+{
+    ParseResult result = parseUrl(url);
+
+    switch(result.urlType) {
+        case InvalidUrl:
+            qCWarning(KIO_TAGS) << result.decodedUrl << "get() invalid url";
+            error(KIO::ERR_DOES_NOT_EXIST, result.decodedUrl);
+            return;
+        case FileUrl:
+            ForwardingSlaveBase::get(result.fileUrl);
+            return;
+        case TagUrl:
+            error(KIO::ERR_UNSUPPORTED_ACTION, result.decodedUrl);
+            return;
+    }
+}
 
 void TagsProtocol::rename(const QUrl& src, const QUrl& dest, KIO::JobFlags flags)
 {
-    qDebug() << src << dest;
-    if (src.isLocalFile()) {
-        error(KIO::ERR_CANNOT_DELETE_ORIGINAL, src.toString());
+    Q_UNUSED(flags);
+
+    ParseResult srcResult = parseUrl(src);
+    ParseResult dstResult;
+
+    if (srcResult.urlType == FileUrl) {
+        dstResult = parseUrl(dest, QList<ParseFlags>() << ChopLastSection);
+    } else if (srcResult.urlType == TagUrl) {
+        dstResult = parseUrl(dest, QList<ParseFlags>() << LazyValidation);
+    }
+
+    if (srcResult.urlType == InvalidUrl) {
+        qCWarning(KIO_TAGS) << srcResult.decodedUrl << "rename() invalid src url";
+        error(KIO::ERR_DOES_NOT_EXIST, srcResult.decodedUrl);
+        return;
+    } else if (dstResult.urlType == InvalidUrl) {
+        qCWarning(KIO_TAGS) << dstResult.decodedUrl << "rename() invalid dest url";
+        error(KIO::ERR_DOES_NOT_EXIST, dstResult.decodedUrl);
         return;
     }
 
-    QString srcTag;
-    QString fileUrl;
+    auto rewriteTags = [] (KFileMetaData::UserMetaData& md, const QString& oldTag, const QString& newTag) {
+        qCDebug(KIO_TAGS) << md.filePath() << "swapping tag" << oldTag << "with" << newTag;
+        QStringList tags = md.tags();
+        tags.removeAll(oldTag);
+        tags.append(newTag);
+        md.setTags(tags);
+    };
 
-    ParseResult srcResult = parseUrl(src, srcTag, fileUrl);
-    switch (srcResult) {
-    case InvalidUrl:
-        return;
-
-    case RootUrl:
-    case TagUrl:
-        error(KIO::ERR_UNSUPPORTED_ACTION, src.toString());
-        return;
-
-    case FileUrl: {
-        // Yes, this is weird, but it is required
-        // It is required cause the dest url is of the form tags:/tag/file_url_with_new_filename
-        // So we extract the new fileUrl from the 'src', and apply the new file to the dest
-        QString destUrl = fileUrl;
-        int lastIndex = destUrl.lastIndexOf(QDir::separator());
-        destUrl.resize(lastIndex + 1);
-        destUrl.append(dest.fileName());
-
-        ForwardingSlaveBase::rename(QUrl(fileUrl), QUrl(destUrl), flags);
-        return;
+    if (srcResult.metaData.tags().contains(dstResult.tag)) {
+        qCWarning(KIO_TAGS) << srcResult.fileUrl.toLocalFile() << "file already has tag" << dstResult.tag;
+        infoMessage(i18n("File %1 already has tag %2", srcResult.fileUrl.toLocalFile(), dstResult.tag));
+    } else if (srcResult.urlType == FileUrl && src.isLocalFile()) {
+        rewriteTags(srcResult.metaData, srcResult.tag, dstResult.tag);
+    } else if (dstResult.urlType == TagUrl) {
+        ResultIterator it = srcResult.query.exec();
+        while (it.next()) {
+            KFileMetaData::UserMetaData md(it.filePath());
+            if (it.filePath() == srcResult.fileUrl.toLocalFile()) {
+                rewriteTags(md, srcResult.tag, dstResult.tag);
+            } else if (srcResult.fileUrl.isEmpty()) {
+                for (const QString& tag : md.tags()) {
+                    if (tag == srcResult.tag || (tag.startsWith(srcResult.tag + QLatin1Char('/')))) {
+                        QString newTag = tag;
+                        newTag.replace(srcResult.tag, dstResult.tag, Qt::CaseInsensitive);
+                        rewriteTags(md, tag, newTag);
+                    }
+                }
+            }
+        }
     }
-    }
+
+    finished();
 }
 
 void TagsProtocol::del(const QUrl& url, bool isfile)
 {
-    Q_UNUSED(url)
     Q_UNUSED(isfile);
-    /*
 
-    Tag tag;
-    QString fileUrl;
+    ParseResult result = parseUrl(url);
 
-    ParseResult result = parseUrl(url, tag, fileUrl);
-    switch (result) {
-    case InvalidUrl:
-        return;
+    auto rewriteTags = [] (KFileMetaData::UserMetaData& md, const QString& tag) {
+        qCDebug(KIO_TAGS) << md.filePath() << "removing tag" << tag;
+        QStringList tags = md.tags();
+        tags.removeAll(tag);
+        md.setTags(tags);
+    };
 
-    case RootUrl:
-        error(KIO::ERR_UNSUPPORTED_ACTION, url.toString());
-        return;
-
-    case TagUrl: {
-        TagRemoveJob* job = new TagRemoveJob(tag);
-        job->exec();
-
-        finished();
-        return;
+    switch(result.urlType) {
+        case InvalidUrl:
+            qCWarning(KIO_TAGS) << result.decodedUrl << "del() invalid url";
+            error(KIO::ERR_DOES_NOT_EXIST, result.decodedUrl);
+            return;
+        case FileUrl:
+        case TagUrl:
+            ResultIterator it = result.query.exec();
+            while (it.next()) {
+                KFileMetaData::UserMetaData md(it.filePath());
+                if (it.filePath() == result.fileUrl.toLocalFile()) {
+                    rewriteTags(md, result.tag);
+                } else if (result.fileUrl.isEmpty()) {
+                    for (const QString &tag : md.tags()) {
+                        if ((tag == result.tag) || (tag.startsWith(QString(result.tag + QLatin1Char('/')), Qt::CaseInsensitive))) {
+                            rewriteTags(md, tag);
+                        }
+                    }
+                }
+            }
     }
 
-    case FileUrl: {
-        qDebug() << "Removing file url : " << fileUrl;
-        // FIXME: FUCK!!!!!!
-        TagRelation rel(tag, );
-        TagRelationRemoveJob* job = new TagRelationRemoveJob(T);
-        job->exec();
-
-        if (job->error()) {
-            qWarning() << job->errorString();
-            error(KIO::ERR_CANNOT_DELETE, job->errorString());
-        } else {
-            finished();
-        }
-        return;
-    }
-    }*/
+    finished();
 }
-
 
 void TagsProtocol::mimetype(const QUrl& url)
 {
-    qDebug() << url;
+    ParseResult result = parseUrl(url);
 
-    QString tag;
-    QString fileUrl;
-
-    ParseResult result = parseUrl(url, tag, fileUrl);
-    switch (result) {
-    case InvalidUrl:
-        return;
-
-    case RootUrl:
-    case TagUrl:
-        mimeType(QStringLiteral("inode/directory"));
-        finished();
-        return;
-
-    case FileUrl:
-        ForwardingSlaveBase::mimetype(QUrl::fromLocalFile(fileUrl));
-        return;
+    switch(result.urlType) {
+        case InvalidUrl:
+            qCWarning(KIO_TAGS) << result.decodedUrl << "mimetype() invalid url";
+            error(KIO::ERR_DOES_NOT_EXIST, result.decodedUrl);
+            return;
+        case FileUrl:
+            ForwardingSlaveBase::mimetype(result.fileUrl);
+            return;
+        case TagUrl:
+            mimeType(QStringLiteral("inode/directory"));
     }
+
+    finished();
 }
 
-// The ForwardingSlaveBase functions are always called with a file:// url
-// In this case we just set the newUrl = url
+void TagsProtocol::mkdir(const QUrl& url, int permissions)
+{
+    Q_UNUSED(permissions);
+
+    ParseResult result = parseUrl(url, QList<ParseFlags>() << LazyValidation);
+
+    switch(result.urlType) {
+        case InvalidUrl:
+        case FileUrl:
+            qCWarning(KIO_TAGS) << result.decodedUrl << "mkdir() invalid url";
+            error(KIO::ERR_DOES_NOT_EXIST, result.decodedUrl);
+            return;
+        case TagUrl:
+            m_unassignedTags << result.tag;
+    }
+
+    finished();
+}
+
 bool TagsProtocol::rewriteUrl(const QUrl& url, QUrl& newURL)
 {
-    if (url.scheme() != QLatin1String("file"))
-        return false;
+    Q_UNUSED(url);
+    Q_UNUSED(newURL);
 
-    newURL = url;
-    return true;
+    return false;
 }
 
-QString TagsProtocol::decodeFileUrl(const QString& urlString)
+TagsProtocol::ParseResult TagsProtocol::parseUrl(const QUrl& url, const QList<ParseFlags> &flags)
 {
-    return QString::fromUtf8(QByteArray::fromPercentEncoding(urlString.toUtf8(), '_'));
-}
+    TagsProtocol::ParseResult result;
+    result.decodedUrl = QUrl::fromPercentEncoding(url.toString().toUtf8());
 
-QString TagsProtocol::encodeFileUrl(const QString& url)
-{
-    return QString::fromUtf8(url.toUtf8().toPercentEncoding(QByteArray(), QByteArray(), '_'));
-}
+    auto createUDSEntryForTag = [] (const QString& tagSection, const QString& tag) {
+        KIO::UDSEntry uds;
+        uds.insert(KIO::UDSEntry::UDS_NAME, tagSection);
+        uds.insert(KIO::UDSEntry::UDS_FILE_TYPE, S_IFDIR);
+        uds.insert(KIO::UDSEntry::UDS_MIME_TYPE, QStringLiteral("inode/directory"));
+        uds.insert(KIO::UDSEntry::UDS_ACCESS, 0700);
+        uds.insert(KIO::UDSEntry::UDS_USER, KUser().loginName());
+        uds.insert(KIO::UDSEntry::UDS_ICON_NAME, QStringLiteral("tag"));
+        uds.insert(KIO::UDSEntry::UDS_EXTRA, tag);
 
+        QString displayType;
+        if (tagSection == tag) {
+            displayType = i18n("Tag");
+        } else if (!tag.isEmpty()) {
+            displayType = i18n("Tag Fragment");
+        } else {
+            displayType = i18n("All Tags");
+        }
 
-TagsProtocol::ParseResult TagsProtocol::parseUrl(const QUrl& url, QString& tag, QString& fileUrl, bool)
-{
-    // Isolate the path and sanitize it by removing any beginning and trailing slashes
-    QString path = url.path();
-    while (path.startsWith(QLatin1Char('/')))
-        path.remove(0, 1);
-    while (path.endsWith(QLatin1Char('/')))
-        path.chop(1);
+        uds.insert(KIO::UDSEntry::UDS_DISPLAY_TYPE, displayType);
 
-    // If the resulting string is empty, the result is the root url
-    if (path.isEmpty())
-        return RootUrl;
+        if (tagSection == QLatin1Char('.')) {
+            QString displayName = i18n("Tags");
+            if (!tag.isEmpty()) {
+                displayName = tag.section(QLatin1Char('/'), -1);
+            }
 
-    // If the path doesn't end with a trailing slash, the result is a tag
-    if (!url.path().endsWith(QLatin1Char('/'))) {
-        tag = path;
-        fileUrl.clear();
+            uds.insert(KIO::UDSEntry::UDS_DISPLAY_NAME, displayName);
+        }
 
-        return TagUrl;
-    } else {
-        tag = path;
-        QString fileName = url.fileName();
-        fileUrl = decodeFileUrl(fileName);
+        if (tagSection == QStringLiteral("..")) {
+            QString displayName = i18n("Tags");
+            if (!tag.isEmpty()) {
+                displayName = tag.section(QLatin1Char('/'), -3);
+            }
 
-        return FileUrl;
+            uds.insert(KIO::UDSEntry::UDS_DISPLAY_NAME, displayName);
+        }
+
+        return uds;
+    };
+
+    TagListJob* tagJob = new TagListJob();
+    if (!tagJob->exec()) {
+        qCWarning(KIO_TAGS) << "tag fetch failed:" << tagJob->errorString();
+        return result;
     }
-}
 
+    if (url.isLocalFile()) {
+        result.urlType = FileUrl;
+        result.fileUrl = url;
+        result.metaData = KFileMetaData::UserMetaData(url.toLocalFile());
+        qCDebug(KIO_TAGS) << result.decodedUrl << "url file path:" << result.fileUrl.toLocalFile();
+    } else if (url.scheme() == QLatin1String("tags")) {
+        bool validTag = flags.contains(LazyValidation);
+        QString filePath;
+
+        // Extract any local file path from the URL.
+        if (result.decodedUrl.contains(QStringLiteral("?/"))) {
+            filePath = QDir::separator() + result.decodedUrl.section(QStringLiteral("?/"), -1, QString::SectionSkipEmpty);
+            result.fileUrl = QUrl::fromLocalFile(filePath);
+            result.metaData = KFileMetaData::UserMetaData(filePath);
+            qCDebug(KIO_TAGS) << result.decodedUrl << "url file path:" << filePath;
+        }
+
+        // Determine the tag from the URL.
+        result.tag = result.decodedUrl.section(QStringLiteral("?/"), 0, 0);
+        result.tag.remove(url.scheme() + QLatin1Char(':'));
+        result.tag = QDir::cleanPath(result.tag);
+        while (result.tag.startsWith(QLatin1Char('/'))) {
+            result.tag.remove(0, 1);
+        }
+
+        if (!filePath.isEmpty() || flags.contains(ChopLastSection)) {
+            result.tag = result.tag.section(QDir::separator(), 0, -2);
+        }
+
+        validTag = validTag || result.tag.isEmpty();
+
+        if (!result.tag.isEmpty()) {
+            // Create a query to find files that may be in the operation's scope.
+            QString query = result.tag;
+            query.prepend("tag:");
+            query.replace('/', " AND tag:");
+            result.query.setSearchString(query);
+
+            qCDebug(KIO_TAGS) << result.decodedUrl << "url query:" << query;
+
+            if (result.tag.contains(QLatin1Char('/'))) {
+                qCDebug(KIO_TAGS) << result.decodedUrl << "url is a tag fragment:" << result.tag;
+            } else {
+                qCDebug(KIO_TAGS) << result.decodedUrl << "url is a tag:" << result.tag;
+            }
+        } else {
+            qCDebug(KIO_TAGS) << result.decodedUrl << "url is the root tag url";
+        }
+
+        // Create the tag directory entries.
+        int index = result.tag.count(QLatin1Char('/')) + (result.tag.isEmpty() ? 0 : 1);
+        QStringList tagPaths;
+
+        const QStringList tags = QStringList() << tagJob->tags() << m_unassignedTags;
+        for (const QString& tag : tags) {
+            if (result.tag.isEmpty() || (tag.startsWith(result.tag, Qt::CaseInsensitive))) {
+                QString tagSection = tag.section(QLatin1Char('/'), index, index, QString::SectionSkipEmpty);
+                if (!tagPaths.contains(tagSection, Qt::CaseInsensitive) && !tagSection.isEmpty()) {
+                    result.pathUDSResults << createUDSEntryForTag(tagSection, tag);
+                    tagPaths << tagSection;
+
+                    qCDebug(KIO_TAGS) << result.decodedUrl << "added path:" << tagSection;
+                }
+            }
+
+            validTag = validTag || tag.startsWith(result.tag, Qt::CaseInsensitive);
+        }
+
+        if (validTag && result.fileUrl.isEmpty()) {
+            result.urlType = TagUrl;
+        } else if (validTag && !result.fileUrl.isEmpty()) {
+            result.urlType = FileUrl;
+        }
+    }
+
+    qCDebug(KIO_TAGS) << result.decodedUrl << "url type:" << result.urlType;
+
+    if (result.urlType == FileUrl) {
+        return result;
+    } else {
+        result.pathUDSResults << createUDSEntryForTag(QStringLiteral("."), result.tag);
+    }
+
+    // The root tag url has no file entries
+    if (result.tag.isEmpty()) {
+        return result;
+    } else {
+        result.pathUDSResults << createUDSEntryForTag(QStringLiteral(".."), result.tag);
+    }
+
+    // Query for any files associated with the tag.
+    Query q;
+    q.setSortingOption(Query::SortNone);
+    q.setSearchString(QStringLiteral("tag=\"%1\"").arg(result.tag));
+    ResultIterator it = q.exec();
+    while (it.next()) {
+        const QUrl& match = QUrl::fromLocalFile(it.filePath());
+
+        // Somehow stat the file
+        KIO::UDSEntry uds;
+        KIO::StatJob* job = KIO::stat(match, KIO::HideProgressInfo);
+        // we do not want to wait for the event loop to delete the job
+        QScopedPointer<KIO::StatJob> sp(job);
+        job->setAutoDelete(false);
+        if (job->exec()) {
+            uds = job->statResult();
+
+            qCDebug(KIO_TAGS) << result.decodedUrl << "adding file:" << match.fileName();
+        } else {
+            continue;
+        }
+
+        uds.insert(KIO::UDSEntry::UDS_NAME, match.fileName() + QStringLiteral("?") + it.filePath());
+        uds.insert(KIO::UDSEntry::UDS_DISPLAY_NAME, match.fileName());
+        uds.insert(KIO::UDSEntry::UDS_TARGET_URL, match.toString());
+        uds.insert(KIO::UDSEntry::UDS_ICON_OVERLAY_NAMES, QStringLiteral("tag"));
+
+        result.pathUDSResults << uds;
+    }
+
+    return result;
+}
 
 extern "C"
 {
